--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/JosestebanPorrasV/hacienda-el-orosi-api#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -28,8 +29,9 @@
     "mongoose": "^5.11.13",
     "mongoose-paginate-v2": "^1.3.14",
     "mongoose-sequence": "^5.3.1",
+    "nodemailer": "^6.4.17",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.7",
-    "speakeasy": "^2.0.0",
     "validator": "^13.5.2"
   }
 }
