bug resulto con las fechas en los models

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB_CNN=mongodb+srv://haciendaOrosi:familiavg2015@hacienda-el-orosi-db.luxh0.mong
 SECRET_JWT_SEED=Esto-Es-UnA-PalbR@_SecretA12341267
 GMAIL=elvin758@gmail.com
 PASSWORD_GMAIL=Fuck4871
+TZ ="America/Costa_Rica"
