--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ PORT=4000
 DB_CNN=mongodb+srv://haciendaOrosi:familiavg2015@hacienda-el-orosi-db.luxh0.mongodb.net/hacienda-el-orosi-db
 SECRET_JWT_SEED=Esto-Es-UnA-PalbR@_SecretA12341267
 GMAIL=elvin758@gmail.com
-PASSWORD_GMAIL=Fuck4871
+PASSWORD_GMAIL=pf3NyZsYy9LUaiW
 TZ ="America/Costa_Rica"
