--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hacienda-el-orosi-api",
   "version": "1.0.0",
-  "description": "Backend del proyecto Hacienda El Orosi",
+  "description": "Proyecto Hacienda El Orosi",
   "main": "Express_server.js",
   "scripts": {
     "start": "nodemon Express_server.js",
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JosestebanPorrasV/hacienda-el-orosi-api.git"
+    "url": "git+https://github.com/elvinlab/hacienda-el-orosi-web-app.git"
   },
   "author": "Proyecto realizado por: elvinlab,JosestebanPorrasV, advargar, JankisJ",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/JosestebanPorrasV/hacienda-el-orosi-api/issues"
+    "url": "https://github.com/elvinlab/hacienda-el-orosi-web-app/issues"
   },
-  "homepage": "https://github.com/JosestebanPorrasV/hacienda-el-orosi-api#readme",
+  "homepage": "https://github.com/elvinlab/hacienda-el-orosi-web-app#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
