--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ DB_CNN=mongodb+srv://haciendaOrosi:familiavg2015@hacienda-el-orosi-db.luxh0.mong
 SECRET_JWT_SEED=Esto-Es-UnA-PalbR@_SecretA12341267
 GMAIL=elvin758@gmail.com
 PASSWORD_GMAIL=pf3NyZsYy9LUaiW
+AWS_ID=AKIA36OGFOCKXDOEWR5A
+AWS_SECRET=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
+BUCKET_NAME=hacienda-el-orosi-bucket
