--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "mongoose": "^5.11.13",
     "mongoose-paginate-v2": "^1.3.14",
     "mongoose-sequence": "^5.3.1",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
     "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.7",
     "pdf-creator-node": "^2.2.2",
+    "uuidv4": "^6.2.7",
     "validator": "^13.5.2"
   }
 }
