--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/elvinlab/hacienda-el-orosi-web-app.git"
   },
-  "author": "Proyecto realizado por: elvinlab,JosestebanPorrasV, advargar, JankisJ",
+  "author": "Proyecto realizado por: elvinlab, JosestebanPorrasV, advargar",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/elvinlab/hacienda-el-orosi-web-app/issues"
@@ -28,7 +28,6 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
     "mongoose": "^5.11.13",
-    "mongoose-paginate-v2": "^1.3.14",
     "mongoose-sequence": "^5.3.1",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
