--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/elvinlab/hacienda-el-orosi-web-app.git"
   },
-  "author": "Proyecto realizado por: elvinlab,JosestebanPorrasV, advargar, JankisJ",
+  "author": "Proyecto realizado por: elvinlab, JosestebanPorrasV, advargar",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/elvinlab/hacienda-el-orosi-web-app/issues"
