bug fix with heroku deploy with react and express

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=4000
 DB_CNN=mongodb+srv://haciendaOrosi:familiavg2015@hacienda-el-orosi-db.luxh0.mongodb.net/hacienda-el-orosi-db
 SECRET_JWT_SEED=Esto-Es-UnA-PalbR@_SecretA12341267
-GMAIL=hdaelorosi@gmail.com
-PASSWORD_GMAIL=familiavg2015
+GMAIL=elvin758@gmail.com
+PASSWORD_GMAIL=pf3NyZsYy9LUaiW
 AWS_ID=AKIA36OGFOCKXDOEWR5A
 AWS_SECRET=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
 BUCKET_NAME=hacienda-el-orosi-bucket
