--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/elvinlab/hacienda-el-orosi-web-app#readme",
   "dependencies": {
-    "aws-sdk": "^2.882.0",
+    "aws-sdk": "^2.1611.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -29,10 +29,11 @@
     "moment": "^2.29.1",
     "mongoose": "^5.11.13",
     "mongoose-sequence": "^5.3.1",
-    "multer": "^1.4.2",
+    "multer": "1.4.5-lts.1",
     "nodemailer": "^6.4.17",
     "nodemailer-smtp-transport": "^2.4.2",
     "nodemon": "^2.0.7",
+    "uploadthing": "^6.10.1",
     "uuidv4": "^6.2.7",
     "validator": "^13.5.2"
   }
